public/css/style.css
:root{
    --nav: #0077b6;

    --footer: #0077b6;
    --footer-text: #fff;

    --bg: white;
    --bg-container: #ddd;

    --button-bg: #0077b6;
    --bg-slide: #fff;

    --bg-presentation: #fff;
    --text-presentation: #000;
    --ombre-presentation: grey;


    --bg-form: #0077b6;
    --bg-forn: #024c74;
    --form-label-color: #fff;
    --form-textfield-bg: #fff;
    --form-submit-bg: darkgreen;
    --form-clear-bg: #a4161a;
    --form-btn-text: #fff;

}
*{
    font-family: Arial, Helvetica, sans-serif;
}
hr{
    width: 80%;
}
a{
    text-decoration: none;
    color: inherit;
}
ul{
    list-style: none;
}

header{
    display: flex;
    flex-direction: column;
    width: 100%;
}

header p{
    display: flex;
    justify-content: center;
}

/* fond de la page */
body{
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    align-items: center;
    justify-content: space-between;
    background: var(--bg);
    min-height: 100vh;
    min-width: 300px;
}
/* bloc de présention contenat le logo et un texte */

.presentation{
    background: var(--bg-presentation);
    width: 50%;
    min-width: 100px;
    align-self: center;
    align-items: center;
    margin-top: 40px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    box-shadow: var(--ombre-presentation) 1px 1px 5px;
}




/* barre de navigation */
nav{
    background-color: var(--nav);
    margin: 0;
    padding: 10px;
    display: flex;
    align-items: center; 
    flex-direction: row;
    height: 100px;
    position: relative;
    top: 0;
}
/* liste de boutons boutons permettant d'acceder au module */
.nav-btn {
    list-style: none;
    display: flex;
    flex-direction: row;
    gap: 15px; /* espace entre les boutons */
    align-items: center;
    margin: 10px;
}

.nav-btn li a {
    background: var(--button-bg); /* couleur de fond du bouton */
    padding: 10px 20px;
    border-radius: 10px;
    text-align: center;
    display: inline-block;
    color: #fff;
    transition: all 0.2s ease-out;
}

.nav-btn li a:hover {
    transform: translateY(-5px);
    border-radius: 30px;
    background-color: #0096c7; /* léger survol pour effet */
}

/* bouton */
.btn{
    width:100%;
    height:100%;
    margin: 10px;

}


/* espace reserve à l'emplacement du logo */
.logo { 
    border: 1px solid black;
    margin: 5px;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    padding: 6px;  
    display: flex;                /* pour centrer le contenu */
    align-items: center;
    justify-content: center;
    background-color: #fff;
    overflow: hidden;             /* pour que le logo ne dépasse pas le cercle */
}

/* Image à l’intérieur du logo */
.logo img {
    max-width: 100%;
    max-height: 100%;  
    object-fit: contain;
}

main {
    flex: 1;                /* prend l’espace restant entre nav et footer */
    display: flex;
    justify-content: center; /* centre horizontalement */
    align-items: center;     /* centre verticalement */
    width: 100%;
    margin: 20px;
}

/* Formulaires */
.form-container{
    background-color: var(--bg-form);
    width: fit-content;
    height: fit-content;
    margin: 20px;
    border-radius: 10px;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    padding-top: 10px;
}

fieldset{
    margin: 20px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

form{
    /*width: 450px;*/
    min-width: fit-content;
    height: 100%;
    margin: 10px;
    display: flex;
    flex-direction: column;
}
.section-form{
    margin: 10px ;
}
#calcul-form .label, #gauss-form label{
    color: white;
    margin: 10px;
}

form input[type=text],
form input[type=password],
form input[type=number],
form select {
    margin-top: 5px;
    margin-bottom: 10px;
    height: 30px;
    width: 95%;
    min-width: fit-content;
    border: 1px lightgrey solid;
    border-radius: 5px;
    padding: 5px;
    transition: border 0.25s linear;
}

form input[type=text]:focus,
form input[type=password]:focus,
form input[type=number]:focus{
    outline: none;
    border: 1px var(--bg-form) solid;
}

/* Boutons submit et reset */
.form .form-btn, fieldset form input[type=submit] {
    min-width: 80%; /* Prendre toute la largeur disponible */
    height: 40px; /* Hauteur suffisante pour éviter que le texte soit coupé */
    font-size: 16px; /* Taille du texte lisible */
    text-align: center; /* Centrer le texte */
    padding: 10px; /* Ajout de padding vertical pour espacer le texte des bords */
    border-radius: 5px; /* Arrondir les coins */
    border: none; /* Enlever la bordure par défaut */
    margin: 5px; /* Espacement vertical entre les boutons */
}

form input[type=submit]{
    background-color: var(--form-submit-bg);
    color: var(--form-btn-text);
    align-self: center;
}

form input[type=reset]{
    background-color: var(--form-clear-bg);
    color: var(--form-btn-text);
    align-self: center;
}

fieldset form input[type=submit]{
    background-color: var(--bg-form);
}
/* oeillet du mot de passe */
input[type="password"]::-ms-reveal,
input[type="password"]::-ms-clear {
    display: none;
}
.password-container {
    position: relative;
    display: inline-block;
}

.password-container button {
    position: absolute;
    right: 20px;
    top: 50%;
    transform: translateY(-30%);
    background: none;
    border: none;
    cursor: pointer;
    font-size: 18px;
}
/*
.captcha{
    background: var(--bg);
    height: 200px;
    width: 200px;
    margin: 20px;
    border-radius: 10px;

}
*/

.fan-container form{
    min-width: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.constraints-list {
    font-size: 0.85em;
    margin-top: 10px;
    margin-bottom: 15px;
    padding: 10px;
    background-color: #f9f9f9;
    border-radius: 5px;
}

.valid { 
    color: #28a745 !important; /* Vert */
    font-weight: bold;
}

.invalid { 
    color: #dc3545 !important; /* Rouge */
}

/* bas de page */
footer{
    background-color: var(--footer);
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    height: 100px;
    width: 100%;
    align-items: center;
    justify-content: center;
    color: var(--footer-text);
    /*position: fixed;*/
    bottom: 0;
}

footer ul{
    display: flex;
    flex-direction: row;
}
footer ul li{
    margin-left: 5px;
    margin-right: 5px;
}

